--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+GameJam2018/Assets/GameJamScotti.unity
+GameJam2018/Assets/GameJamScotti.unity
+GameJam2018/Assets/GameJamScotti.unity.meta
