--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 GameJam2018/Assets/GameJamScotti.unity
 GameJam2018/Assets/GameJamScotti.unity
 GameJam2018/Assets/GameJamScotti.unity.meta
+GameJam2018/Assets/test.unity
